# rscord

./: .env.production.example  AUDIO_ARCHITECTURE.md  AUDIO_CLEANUP.md  BUILD_GUIDE.md  IMPROVEMENT_PLAN.md  INTEGRATION_REPORT.md  ITERATION_5_README.md  LICENSE  LIVEKIT_SETUP.md  MICROSERVICES_ARCHITECTURE.md  README.md  RSCORD_PROJECT_DOCUMENTATION.md  VOICE_SETUP.md  VOIP_PING_INTEGRATION.md  VPS_deploy.md  WEBSOCKET_API.md  api-testing-guide.md  build-and-deploy.sh  check-binaries.sh  cleanup-project.sh  cleanup.sh  complete-server-fix.sh  conversation_history.txt  conversation_history_complete.txt  deploy-auth-system.sh  deploy-enhanced-voice.sh  deploy-on-server.sh  deploy-secure.sh  deploy.sh  desktop-readme.md  diagnose-services.sh  docker-compose.production.yml  docker-compose.yml  fix-and-build.sh  fix-config-and-restart.sh  fix-services.sh  livekit-production.yaml  livekit.yaml  nginx-production.conf  nginx-voice-redis.conf  (+17 more)
.claude/: settings.local.json
.github/workflows/: build-desktop.yml  security-check.yml
apps/RadiateDesktop/: BUILD_INSTRUCTIONS.md  build-advanced.ps1  build-complete.bat  build-complete.sh  build-installer.bat  build-installer.sh  index.html  package-lock.json  package.json  start.bat  start.sh  tsconfig.json  vite.config.ts
apps/RadiateDesktop/public/icons/: icon.icns
apps/RadiateDesktop/src/: App.tsx
apps/RadiateDesktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/RadiateDesktop/src-tauri/capabilities/: main.json
apps/RadiateDesktop/src-tauri/src/: lib.rs
apps/RadiateDesktop/src/components/: AppRouter.tsx  ServerSelector.tsx  VoicePingDisplay.tsx
apps/RadiateDesktop/src/components/auth/: ProtectedRoute.tsx
apps/RadiateDesktop/src/components/ui/: Logo.tsx  card.tsx  context-menu.tsx
apps/RadiateDesktop/src/components/voice/: types.ts  utils.ts
apps/RadiateDesktop/src/config/: api.ts  environment.ts
apps/RadiateDesktop/src/contexts/: AuthContext.tsx  ThemeContext.tsx
apps/RadiateDesktop/src/hooks/: useVoiceRooms.ts
apps/RadiateDesktop/src/lib/livekit/: livekitManager.ts
apps/RadiateDesktop/src/services/: voip-ping-manager.ts
apps/RadiateDesktop/src/styles/: components.css  theme.css
apps/RadiateDesktop/src/types/: audio.ts  voice-stats.ts
apps/desktop/: ANTHROPIC_DESIGN_SYSTEM.md  README.md  SERVER_CONFIGURATION.md  SHADCN_TAILWIND_GUIDE.md  TAILWIND_GUIDE.md  check-system.bat  create-release.bat  package-lock.json  package.json  quick-build.bat  tailwind.config.js
apps/desktop/releases/v0.3.1/: RELEASE_NOTES.md
apps/desktop/src/: App.css  App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/audio/: audio_config.rs  error.rs  mod.rs  ring_buffer.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/desktop/src/app/: AppProviders.tsx  routes.tsx
apps/desktop/src/config/: api.ts  environment.ts
apps/desktop/src/contexts/: WebSocketContext.tsx
apps/desktop/src/hooks/: useContextMenuDisable.ts  useEnhancedVoiceRooms.ts
apps/desktop/src/pages/: MainApp.css  MainApp.tsx  VoiceRoom.tsx
apps/desktop/src/styles/: glassmorphism.css  globals.css  theme.css
apps/desktop/src/webrtc/: signaling.ts  voice.ts
backup/: AudioTestComponent_backup.tsx  audio_commands_backup.rs
backup/audio_module_backup/: audio_stream.rs  opus_processor.rs
backup/frontend_audio_backup/: audioCoordinator.ts  audioManager.ts  webrtc.ts
backup/old_styles/: anthropic-design.css  globals.css
coturn/: turnserver.conf
livekit/: docker-compose.yml  livekit.yaml
scripts/: run_tauri_with_msvc.cmd  setup_msvc_and_run_server.cmd  start-services.bat  start-services.sh  start_livekit_dev.cmd  start_mongodb.cmd  start_project.cmd  stop_project.cmd
servers/: .gitignore  Cargo.toml  Dockerfile  README.md  check-status.sh  migrate.rs  migration_script.js  production.env  production.toml  radiate.toml  rscord.toml  start-backend.sh  start_livekit.cmd  stop-backend.sh
servers/auth-service/: Cargo.toml  Dockerfile
servers/auth-service/src/: app.rs  background_tasks.rs  handlers.rs  health.rs  lib.rs  main.rs  models.rs  rate_limiter.rs  security.rs  username_validator.rs
servers/auth-service/tests/: auth_tests.rs  common.rs
servers/chat-service/: Cargo.toml
servers/chat-service/src/: events.rs  handlers.rs  main.rs  message_handlers.rs  models.rs
servers/crates/api/: Cargo.toml
servers/crates/api/src/: auth.rs  events.rs  livekit.rs  livekit_mock.rs  main.rs
servers/crates/common/: Cargo.toml
servers/crates/common/src/: enhanced_jwt.rs  error_recovery.rs  lib.rs  permission_checker.rs  permissions.rs  rate_limiter.rs
servers/crates/events/: Cargo.toml
servers/crates/events/src/: lib.rs  main.rs
servers/crates/files/: Cargo.toml
servers/crates/files/src/: main.rs
servers/file-service/: Cargo.toml
servers/file-service/src/: image_processor.rs  main.rs  validators.rs
servers/gateway/: Cargo.toml
servers/gateway/src/: main.rs  redis_pubsub.rs
servers/gateway/src/routes/: websocket.rs
servers/gateway/src/websocket/: auth.rs  chat_client.rs  connection.rs  enhanced_handler.rs  handler.rs  messages.rs  mod.rs  presence_client.rs  types.rs
servers/presence-service/: Cargo.toml
servers/presence-service/src/: events.rs  main.rs  presence.rs
servers/signaling/: Cargo.toml
servers/signaling/src/: main.rs
servers/telegram-bot-service/: Cargo.toml  Dockerfile
servers/telegram-bot-service/src/: auth.rs  config.rs  full_main.rs  main.rs  main.rs.simple  redis_store.rs  simple_main.rs
servers/voice-service/: Cargo.toml
servers/voice-service/src/: config.rs  enhanced_livekit_client.rs  improved_state.rs  integrated_livekit_client.rs  lib.rs  livekit_client.rs  livekit_client_corrected.rs  livekit_client_fixed.rs  main.rs  main_corrected.rs  main_simple.rs  redis.rs  redis_manager.rs  room_manager.rs  room_manager_corrected.rs  room_manager_simple.rs  rooms.rs  signaling.rs  types.rs  webhooks.rs  webrtc_manager.rs
services/gateway/src/websocket/: presence.rs
(+91 files in other folders)
