[package]
name = "rscord-auth-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "rscord_auth_service"
path = "src/lib.rs"

[[bin]]
name = "rscord-auth-service"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
mongodb = { version = "3", default-features = false, features = ["rustls-tls", "compat-3-0-0"] }
futures-util = "0.3"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1", features = ["serde"] }
argon2 = "0.5"
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
time = { version = "0.3", features = ["macros"] }
password-hash = "0.5"
rand_core = "0.6"
rscord-common = { path = "../crates/common" }
rscord-events = { path = "../crates/events" }
tower = { version = "0.5", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
headers = "0.4"
lapin = { version = "2", default-features = false, features = ["native-tls"] }

[dev-dependencies]
axum-test = "15"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
tokio-test = "0.4"
