[package]
name = "radiate-auth-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "radiate_auth_service"
path = "src/lib.rs"

[[bin]]
name = "radiate-auth-service"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
mongodb = { version = "3", default-features = false, features = ["rustls-tls", "compat-3-0-0"] }
futures-util = "0.3"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1", features = ["serde"] }
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
time = { version = "0.3", features = ["macros"] }
rand = "0.8"
radiate-common = { path = "../crates/common" }
radiate-events = { path = "../crates/events" }
tower = { version = "0.5", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
headers = "0.4"
lapin = { version = "2", default-features = false, features = ["native-tls"] }
regex = "1"
once_cell = "1"
thiserror = "1"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"

[dev-dependencies]
axum-test = "15"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
tokio-test = "0.4"
