[package]
name = "rscord-chat-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
mongodb = { version = "3", default-features = false, features = ["rustls-tls", "compat-3-0-0"] }
futures-util = "0.3"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1", features = ["serde"] }
rscord-common = { path = "../crates/common" }
rscord-events = { path = "../crates/events" }
tower = { version = "0.5", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
lapin = { version = "2", default-features = false, features = ["native-tls"] }
