[package]
name = "rscord-file-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# S3 storage
aws-sdk-s3 = "1.15"
aws-config = "1.1"

# Image processing
image = "0.24"
webp = "0.2"

# File handling
mime = "0.3"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"
futures-util = "0.3"

# Database
mongodb = { version = "2", features = ["tokio-runtime"] }
chrono = { version = "0.4", features = ["serde"] }

# Common crate
rscord-common = { path = "../crates/common" }
