[package]
name = "radiate-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower = { version = "0.5", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
anyhow = "1"
radiate-common = { path = "../crates/common" }
headers = "0.4"
futures-util = "0.3"
bytes = "1"
dashmap = "6"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager", "streams"] }
deadpool-redis = "0.15"
