[package]
name = "radiate-presence-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower = { version = "0.5", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
dashmap = "5"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
radiate-common = { path = "../crates/common" }
radiate-events = { path = "../crates/events" }
lapin = { version = "2", default-features = false, features = ["native-tls"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
