[package]
name = "radiate-telegram-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.24", features = ["tokio-comp"] }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.5", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
radiate-common = { path = "../crates/common" }
teloxide = { version = "0.12", features = ["macros", "webhooks"] }
rand = "0.8"