[package]
name = "desktop"
version = "0.1.0"
description = "RSCord Desktop Application"
authors = ["RSCord Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Optimize release builds for size and performance
[profile.release]
opt-level = "z"           # Optimize for size
lto = true                # Link Time Optimization
codegen-units = 1         # Single codegen unit for better optimization
panic = "abort"           # Abort on panic (smaller binary)
strip = true              # Strip symbols from binary
overflow-checks = false   # Disable overflow checks in release

# Development profile
[profile.dev]
opt-level = 0             # No optimization for faster compilation
debug = true              # Include debug information
overflow-checks = true    # Enable overflow checks in development

