[package]
name = "desktop"
version = "0.1.0"
description = "RSCord Desktop Application"
authors = ["RSCord Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Audio processing dependencies
audiopus = "0.3"          # High-level Opus codec bindings
cpal = "0.15"             # Cross-platform audio I/O
hound = "3.5"             # WAV file support for testing
ringbuf = "0.4"           # Lock-free ring buffer for audio
uuid = { version = "1.0", features = ["v4"] }

# Async and concurrency
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_Media_Audio_CoreAudio",
    "Win32_System_Com",
    "Win32_Foundation"
]}

[target.'cfg(target_os = "macos")'.dependencies]
core-audio-sys = "0.2"
coreaudio-rs = "0.11"

[target.'cfg(unix)'.dependencies]
alsa = "0.9"

# Optimize release builds for size and performance
[profile.release]
opt-level = "z"           # Optimize for size
lto = true                # Link Time Optimization
codegen-units = 1         # Single codegen unit for better optimization
panic = "abort"           # Abort on panic (smaller binary)
strip = true              # Strip symbols from binary
overflow-checks = false   # Disable overflow checks in release

# Development profile with audio debugging
[profile.dev]
opt-level = 1             # Light optimization for better audio performance
debug = true              # Include debug information
overflow-checks = true    # Enable overflow checks in development

# Features for conditional compilation
[features]
default = ["native-audio"]
native-audio = []         # Enable native audio processing
webrtc-integration = []   # Future WebRTC features