[package]
name = "rscord-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rscord-common = { path = "../common" }
mongodb = { version = "3" }
argon2 = "0.5"
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
time = { version = "0.3", features = ["macros"] }
tower = { version = "0.5", features = ["timeout", "limit" ] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
password-hash = "0.5"
rand_core = "0.6"
lapin = { version = "2", default-features = false, features = ["native-tls"] }
headers = "0.4"


