[package]
name = "rscord-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
config = { version = "0.14", default-features = false, features = ["toml"] }
ulid = { version = "1", features = ["serde"] }
mongodb = { version = "3", default-features = false, features = ["sync", "rustls-tls", "compat-3-0-0"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"


