[package]
name = "rscord-events"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rscord-common = { path = "../common" }
lapin = { version = "2", default-features = false, features = ["native-tls"] }
futures-util = "0.3"


